<resources>
    <string name="app_name">WebShare</string>
    <string name="app_desc">Share your photo, video, music and file library to any device connected to the same Wi-Fi network.</string>
    <string name="server_running">The server is running! From your other devices, open the following website:</string>
    <string name="authentication_suggest">When you\'re ready to log in, click on the button below to get the authentication code.</string>
    <string name="stop_server_desc">If you\'ve finished uploading all the files, click on the button below to stop the server.</string>
    <string name="get_auth_code">Get authentication code</string>
    <string name="stop_server">Stop server</string>
    <string name="server_not_running">The server is not running. Click on the button below to start the server. If you want, you can also change the port.</string>
    <string name="start_server">Start server</string>
    <string name="selected_port">Selected port:</string>
    <string name="port">Port</string>
    <string name="missing_authorization">Unable to start the server: please grant full file access before trying again.</string>
    <string name="server_start_fail">Failed to start the server: %1$s</string>
    <string name="authorization_code">Authorization code</string>
    <string name="authorization_code_dialog_desc">To log in on your other device, add the code you\'ll find in the next line. %1$s</string>
    <string name="done">Done</string>
    <string name="grant_authorization">Please grant storage access, since otherwise WebShare can\'t work.</string>
    <string name="foreground_title">WebShare is running</string>
    <string name="foreground_desc">Other devices connected to the same Wi-Fi network can see your files.</string>
    <string name="start_server_title">Start server:</string>
    <string name="settings">Settings:</string>
    <string name="calc_folder_size">Calculate the folder\'s size. This will make the Files section of the website slower.</string>
    <string name="server_log_in">Log in to the server:</string>
    <string name="authorize_new_logins">Authorize new logins:</string>
    <string name="access_external_drive">Access to external drives:</string>
    <string name="access_external_drives_desc">Android might require that you manually select your external drive so that it can be seen or modified by WebShare. Click on the button below to do that.</string>
    <string name="pick_external_drive">Pick an external drive</string>
    <string name="revoke_access_desc">Here below you can find all the folders you\'ve manually enabled access to. Click on one of them to revoke access.</string>
    <string name="stop_server_title">Stop the server:</string>
    <string name="new_version_available">A new version is available</string>
    <string name="update_version_desc">Do you want to update WebShare from version %1$s to version %2$s?</string>
    <string name="yes">Yes</string>
    <string name="not_now">Not now</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="webshare_version">WebShare • Version %1$s</string>
    <string name="opensource">You can find the open source licenses list in the web app\'s settings.</string>
    <string name="thirdparty_clients">Allow third-party clients to access to WebShare. This will enable CORS for this server.</string>
    <string name="foreground_login_auth">Authorize new logins</string>
    <string name="foreground_stop_server">Stop the server</string>
</resources>