<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15sp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/work_sans_bold"
                android:text="@string/app_name"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/app_desc" />

            <LinearLayout
                android:id="@+id/startContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:text="@string/start_server_title"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:text="@string/server_not_running" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start_server" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:text="@string/settings"
                            android:textSize="24sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10sp"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:text="@string/selected_port" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="9">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/portValue"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/port"
                                    android:inputType="number" />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/calcFolderSize"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10sp"
                            android:text="@string/calc_folder_size" />

                        <com.google.android.material.materialswitch.MaterialSwitch
                            android:id="@+id/thirdPartyClients"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10sp"
                            android:text="@string/thirdparty_clients" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ongoingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:text="@string/server_log_in"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10px"
                            android:paddingBottom="10px"
                            android:text="@string/server_running" />

                        <TextView
                            android:id="@+id/severLink"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:gravity="center"
                            android:paddingTop="10sp"
                            android:paddingBottom="10sp"
                            android:text="Link"
                            android:textSize="18sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:text="@string/authorize_new_logins"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/authentication_suggest" />

                        <Button
                            android:id="@+id/authentication"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:text="@string/get_auth_code"
                            tools:layout_marginTop="10sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:text="@string/access_external_drive"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10sp"
                            android:text="@string/access_external_drives_desc" />

                        <Button
                            android:id="@+id/externalstorage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:text="@string/pick_external_drive"
                            tools:layout_marginTop="10sp" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="10sp"
                            android:text="@string/revoke_access_desc" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/externalDriveChipContainer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </com.google.android.material.chip.ChipGroup>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/work_sans_bold"
                            android:text="@string/stop_server_title"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/stop_server_desc" />

                        <Button
                            android:id="@+id/stop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:text="@string/stop_server" />
                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <TextView
                android:id="@+id/versionNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:gravity="center"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/opensource" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>